fixed hotel pics section alignment

--- a/src/components/hotel-photos/hotelPhotos.css
+++ b/src/components/hotel-photos/hotelPhotos.css
@@ -2,12 +2,16 @@
   max-width: 50%;
   outline: 3px solid #000;
 }
-#picsBar {
+#picsBarWrapper {
   max-width: 70%;
   margin: 20px auto;
-  overflow-x: auto;
   display: flex;
   justify-content: center;
+}
+#picsBar {
+  overflow-x: auto;
+  overflow-y: hidden;
+  display: flex;
   height: 136px;
 }
 #picsBar img {
